--- a/index.html
+++ b/index.html
@@ -6,16 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <h1>Templet</h1>
+    <header>
+        <a href="#" class="logo"><img src="img/logo.png"></a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navbar">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Sober</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Paginas</a></li>
+            <li><a href="#">Trabbalhos</a></li>
+            <li><a href="#">Contate-me</a></li>
+        </ul>
+        <a href="#" class="btn">Baixar CV</a>
+    
+    </header>
+
+    <section class="container">
+        <div class="text">
+            <div class="slide">
+                <span class="one">Olá</span>
+                <span class="two">Eu sou a</span>
+            </div>
+            <h1>Lisa</h1>
+            <h2>Desenvolvedor <span>WEB</span></h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and <br>typesetting industry. Lorem Ipsum has been</p>
+            
+            <div class="button">
+                <a href="#" class="btn">Diga Olá</a>
+                <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Veja mais Trabalhos</a>
+            </div>
+        </div>
+    </section>
 
 
 
 
 
-
-
-    <script src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
