--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span class="two">Eu sou a</span>
             </div>
             <h1>Lisa</h1>
-            <h2>Desenvolvedor <span>WEB</span></h2>
+            <h2>Desenvolvedor <br><span>WEB</span></h2>
             <p>Lorem Ipsum is simply dummy text of the printing and <br>typesetting industry. Lorem Ipsum has been</p>
             
             <div class="button">
@@ -44,7 +44,13 @@
         </div>
     </section>
 
-
+    <div class="social">
+        <ul>
+            <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
+            <li><a href="#"><i class='bx bxl-linkedin'></i></a></li>
+            <li><a href="#"><i class='bx bxl-github'></i></a></li>
+        </ul>
+    </div>
 
 
 
