--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <span class="two">Eu sou a</span>
             </div>
             <h1>Lisa</h1>
-            <h2>Desenvolvedor <br><span>WEB</span></h2>
+            <h2>Desenvolvedora <br><span>WEB</span></h2>
             <p>Lorem Ipsum is simply dummy text of the printing and <br>typesetting industry. Lorem Ipsum has been</p>
             
             <div class="button">
-                <a href="#" class="btn">Diga Olá</a>
+                <a href="#" class="btn second">Diga Olá</a>
                 <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Veja mais Trabalhos</a>
             </div>
         </div>
@@ -52,8 +52,7 @@
         </ul>
     </div>
 
-
-
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
